add steam playing plugin, optimise some code and configurations.